force-app/main/default/objects/Opportunity_Competitors__c/Opportunity_Competitors__c.object-meta.xml
<CustomObject>
    <description>Custom object to replace the sandard object that is used to track competitive activity on the opportunity</description>
    <label>Opportunity Competitor</label>
    <nameField>
        <displayFormat>OC{000000000}</displayFormat>
        <label>Reference No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Competitors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>