force-app/main/default/objects/Opportunity_Competitors__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Select the competitor by name</inlineHelpText>
    <label>Competitor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>INT Competitors</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities as competitor</relationshipLabel>
    <relationshipName>Opportunity_Competitors</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>