force-app/main/default/objects/Opportunity_Competitors__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the distributor by name (if applicable)</inlineHelpText>
    <label>Distributor</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>INT Partners</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities as competing distributor</relationshipLabel>
    <relationshipName>Opportunity_Competitors1</relationshipName>
    <type>Lookup</type>
</CustomField>