force-app/main/default/objects/Opportunity_Competitors__c/fields/OpportunityLookup__c.field-meta.xml
<CustomField>
    <fullName>OpportunityLookup__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Competitors</relationshipLabel>
    <relationshipName>Opportunity_Competitors</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>