force-app/main/default/objects/Opportunity_Competitors__c/fields/Strengths__c.field-meta.xml
<CustomField>
    <fullName>Strengths__c</fullName>
    <label>Strengths</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>INT_SWOT</valueSetName>
    </valueSet>
</CustomField>